--- a/slack/package.json
+++ b/slack/package.json
@@ -3,9 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "emoji-mart": "^2.8.1",
+    "extension": "^0.2.0",
+    "firebase": "^5.5.5",
+    "md5": "^2.2.1",
+    "mime-types": "^2.1.21",
+    "moment": "^2.22.2",
     "react": "^16.6.0",
+    "react-avatar-editor": "^11.0.4",
+    "react-color": "^2.14.1",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5"
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.0.5",
+    "redux": "^4.0.1",
+    "redux-devtools": "^3.4.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.83.0",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
