--- a/slack/package.json
+++ b/slack/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "^2.0.5",
     "redux": "^4.0.1",
     "redux-devtools": "^3.4.1",
+    "redux-devtools-extension": "^2.13.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.83.0",
     "uuid": "^3.3.2"
